--- a/INSTALL
+++ b/INSTALL
@@ -13,11 +13,12 @@ To compile igotu2gpx, you need:
 - libusb 0.1.13 (on Mac OS X systems, http://www.ellert.se/twain-sane/)
 - chrpath (on Linux, optional, makes it possible to run the program without
   installation)
+- marble (http://edu.kde.org/marble, optional, openstreetmap display of tracks)
 
 On a Ubuntu system, this should get you the dependencies:
 ----
     sudo aptitude install libqt4-dev libboost-dev libboost-program-options-dev \
-        libusb-dev chrpath
+        libusb-dev libmarble-dev chrpath
 ----
 
 Compiling
@@ -42,13 +43,21 @@ If you use a compiler older than gcc 4.0.0, use "qmake CLEBS=novisibility".
 Mac OS X
 ~~~~~~~~
 
-On a Mac OS X system, a bit more work is necessary. Copy the file
-localconfig-template.pri to localconfig.pri, uncomment the lines with macx:...
-and adjust the paths so that they match your installation. Afterwards, try:
+On a Mac OS X system, a bit more work is necessary.
+
+If you want to use marble, get the Mac OS X package from the website and
+install it. Afterwards, find a Windows machine and install the Windows package
+on it, grab the include folder and put it in
+/Applications/marble.app/Contents/Resources/data.
+
+Now copy the file localconfig-template.pri to localconfig.pri, uncomment the
+lines with macx:... and adjust the paths so that they match your installation.
+Afterwards, try:
 ----
     qmake -spec macx-g++ && make && sudo make install
 ----
-which should provide you with a working installation in /usr/local.
+which should provide you with a more or less working installation in /usr/local
+(the path to the marble widget library is wrong).
 
 Microsoft Windows
 ~~~~~~~~~~~~~~~~~
