--- a/src/igotu2gpx/igotu2gpx.1
+++ b/src/igotu2gpx/igotu2gpx.1
@@ -35,7 +35,7 @@ internal flash memory.
 .TP
 \fB\-\-action\fR \fIaction\fR
 show GPS tracker configuration (info), output trackpoints (dump),
-clear memory of the GPS tracker (clear) or show configuration changes
+clear memory of the GPS tracker (clear) or show configuration differences
 relative to an image file (diff)
 .TP
 \fB\-u\fR, \fB\-\-device\fR \fIprotocol:id\fR
