--- a/INSTALL
+++ b/INSTALL
@@ -9,17 +9,16 @@ To compile igotu2gpx, you need:
 - qt4 (http://www.qtsoftware.com/)
 - boost (http://www.boost.org/)
 - boost-program-options (http://www.boost.org/, included with boost)
-- libusb 0.1 (on Linux, http://libusb.sourceforge.net/)
-- libusb 0.1.13 (on Mac OS X systems, http://www.ellert.se/twain-sane/)
+- libusb 1.0 (on Linux and Mac OS X systems, http://libusb.sourceforge.net/)
 - chrpath (on Linux, optional, makes it possible to run the program without
   installation)
 - marble (http://edu.kde.org/marble, optional, openstreetmap display of tracks)
-- openssl (on Windows already on install, otherwise only at runtime, http://openssl.org)
+- openssl (on Windows already on install time, otherwise only at runtime, http://openssl.org)
 
 On a Ubuntu system, this should get you the dependencies:
 ----
     sudo aptitude install libqt4-dev libboost-dev libboost-program-options-dev \
-        libusb-dev libmarble-dev chrpath
+        libusb-1.0-0-dev libmarble-dev chrpath
 ----
 
 Compiling
@@ -46,7 +45,7 @@ If you get an error message of
     /usr/local/bin/igotugui: error while loading shared libraries:
         libigotu.so.1: cannot open shared object file: No such file or directory
 ----
-although it got installed correctly, you might be missing library path. It
+although it got installed correctly, you might be missing a library path. It
 might help to create a file "/etc/ld.so.conf.d/local.conf" with the following
 content:
 -----------
