--- a/INSTALL
+++ b/INSTALL
@@ -10,6 +10,7 @@ To compile igotu2gpx, you need:
 - boost (http://www.boost.org/)
 - boost-program-options (http://www.boost.org/, included with boost)
 - libusb 1.0 (on Linux and Mac OS X systems, http://libusb.sourceforge.net/)
+- pkg-config (on Linux and Mac OS X systems)
 - chrpath (on Linux, optional, makes it possible to run the program without
   installation)
 - marble (http://edu.kde.org/marble, optional, openstreetmap display of tracks)
