--- a/INSTALL
+++ b/INSTALL
@@ -8,7 +8,6 @@ To compile igotu2gpx, you need:
 
 - qt4 (http://www.qtsoftware.com/)
 - boost (http://www.boost.org/)
-- boost-program-options (http://www.boost.org/, included with boost)
 - pkg-config (on Linux and Mac OS X systems)
 - chrpath (on Linux, optional, makes it possible to run the program without
   installation)
@@ -19,7 +18,7 @@ To compile igotu2gpx, you need:
 
 On a Ubuntu system, this should get you the dependencies:
 ----
-    sudo aptitude install libqt4-dev libboost-dev libboost-program-options-dev \
+    sudo aptitude install libqt4-dev libboost-dev \
         libusb-1.0-0-dev libmarble-dev chrpath
 ----
 
